Fix: projectCard primary color blurred for better view

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   /* background-color: #4cc9f0; */
-  background-color: #c791f3;
+  background-color: #d4a7f8;
   box-shadow: 0 19px 38px rgb(0 0 0 / 30%), 0 15px 12px rgb(0 0 0 / 30%);
   border-radius: 15px;
   padding: 40px;
